--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </div>
             <div class="container-datas">
                 <div class="container-title-city">
-                    <h1 id="city-title">São Paulo, BR</h1>
+                    <h1 id="city-title"></h1>
                 </div>
                 <div class="container-visual-temperature-information">
                     <div class="img-wn-div">
                         <img src="https://openweathermap.org/img/wn/04d@2x.png" id="img-wn" alt="">
                     </div>
                     <div class="temperature-container">
-                        <p id="temperature">22,4 <sup>C°</sup></p>
-                        <p id="sky">Céu Limpo</p>
+                        <p id="temperature"></p>
+                        <p id="sky"></p>
                     </div>
     
                 </div>
@@ -45,7 +45,7 @@
                     </div>
                     <div>
                         <p class="title-infos">Temp. max</p>
-                        <p class="temperatura-information" id="maxTemp">32 <sup>C°</sup></p>
+                        <p class="temperatura-information" id="maxTemp"></p>
                     </div>
                 </div>
                 <div>
@@ -63,7 +63,7 @@
                     </div>
                     <div>
                         <p class="title-infos">Humidade</p>
-                        <p  class="temperatura-information" id="humidity" >50 %</p>
+                        <p  class="temperatura-information" id="humidity" ></p>
                     </div>
                 </div>
                 <div>
@@ -72,7 +72,7 @@
                     </div>
                     <div>
                         <p class="title-infos">Vento</p>
-                        <p class="temperatura-information" id="wind-value" >50 km/h</p>
+                        <p class="temperatura-information" id="wind-value" ></p>
                     </div>
                 </div>
             </div>
